web/css/awa.css
/**
 * main.css - Main style for AWA pages
 * Copyright (C) 2011, 2012, 2014, 2016, 2017, 2019 Stephane Carrez
 * Licensed under the Apache License, Version 2.0 (the "License");
 */
html, body, div, dl, dt, dd, ul, ol, li, h1, h2, h3, h4, h5, h6, pre, form, fieldset, input, textarea, p, blockquote, th, td, label {
    margin: 0;
    padding: 0;
}
html, body {
  height: 100%;
}
body {
  font-family: Arial, Verdana, sans-serif;
  font-size: 1.0em;
  background-color: var(--bg-body);
  overflow-y: scroll;
  position: relative;
  min-height: 100%;
  display: flex;
  flex-direction: column;
}
main {
    padding-top: 0;
    flex-grow: 1;
    background-color: white;
    display: block;
    height: auto;
    position: inherit;
}
body.awa {
  background-color: var(--accent-teal);
}
footer {
    width: 100%;
    bottom: 0;
    height: 30px;
    clear: both;
}
* {
    box-sizing: border-box;
}
#awa-page {
    margin-bottom: 0;
    margin-left: 0;
    margin-right: 0;
    width: 100%;
}
#awa-hdr {
    padding: 0;
    margin: 0;
    width: 100%;
    height: 27px;
    background-color: var(--bg-header);
    border-bottom: 5px solid var(--bg-header);
    z-index: 1;
}
.awa-side-nav {
    max-height: 27px;
    transition: max-height .5s ease-out;
    z-index: 10;
}
.awa-side-nav li {
    line-height: 20px;
}
#awa-hdr ul {
  list-style-type: none;
  padding-right: 20px;
}
#awa-tools {
    float: right;
}
#awa-tools li {
  float: right;
  padding-left: 5px;
  padding-right: 5px;
  line-height: 24px;
}
#awa-hdr li a, #awa-hdr li {
    color: var(--text-light);
    font-size: 0.9em;
    text-decoration: none;
}
#awa-hdr #awa-top-nav {
    float: left;
}
#awa-top-nav li {
    border-bottom: none;
    float: left;
    line-height: 20px;
}
#awa-top-nav li a {
    display: inline-block;
    font-size: 1.1em;
    font-weight: bold;
    padding-left: 10px;
    padding-right: 10px;
}
.awa-nav-separator {
    content: '|';
}
#awa-top {
    position: fixed;
    overflow: hidden;
}

/* Drop down side menu */
header {
    position: relative;
}
.awa-side-nav {
    width: calc(100% - 50px);
    height: 100%;
    position: absolute;
}
.awa-menu {
    list-style-type: none;
}
.awa-menu li {
    float: left;
    border-bottom: none;
    line-height: 20px;
}
.awa-menu a {
    display: block;
    width: 100%;
    border-bottom: 3px solid transparent;
    height: 27px;
    font-size: 1.1em;
    font-weight: bold;
    padding-left: 10px;
    padding-right: 10px;
    text-decoration: none;
}
.awa-menu a:hover{
    background-color: var(--bg-hover);
    border-color: var(--border-accent);
}
.awa-hamb-menu {
    display: none;
}
.awa-hamb-menu {
    cursor: pointer;
    float: right;
    padding: 13px 13px; /* 27px = 13 + 13 + 1 */
}
.awa-hamb-line {
    background: var(--border-accent);
    display: block;
    height: 2px;
    position: relative;
    width: 24px;
}

.awa-hamb-line::before,
.awa-hamb-line::after{
    background: #fff;
    content: '';
    display: block;
    height: 100%;
    position: absolute;
    transition: all .2s ease-out;
    width: 100%;
}
.awa-hamb-line::before{
    top: 5px;
}
.awa-hamb-line::after{
    top: -5px;
}
.awa-side-menu {
    display: none;
}
/* Toggle menu icon */
.awa-side-menu:checked ~ nav {
    max-height: 100%;
}
.awa-side-menu:checked ~ .awa-hamb-menu .awa-hamb-line {
    background: transparent;
}
.awa-side-menu:checked ~ .awa-hamb-menu .awa-hamb-line::before {
    transform: rotate(-45deg);
    top:0;
}
.awa-side-menu:checked ~ .awa-hamb-menu .awa-hamb-line::after {
    transform: rotate(45deg);
    top:0;
}


.awa-side-panel {
    display: flex;
    flex-direction: row;
    flex-flow: row;
    width: 100%;
    height: 100%;
    min-height: 100%;
    border-bottom: 1px solid var(--border-light);
}
.awa-left-panel, .awa-right-panel {
    flex: 1 1 auto;
}
.awa-right-panel {
    flex-grow: 1;
}
.awa-right-panel .awa-nav {
    margin-top: 1em;
}
.awa-ok {
  float: left;
  width: 48px;
  height: 48px;
  margin-left: 5px;
  margin-right: 15px;
}
#awa-copyright {
  float: left;
  margin-left: 20px;
  margin-right: 5px;
}
#awa-clfooter {
  clear: both;
  height: 30px; /* See #awa-page margin bottom */
  width: 100%;
}
#awa-footer_content {
  float: right;
  margin-right: 20px;
  margin-top: 8px;
}
ul.awa-buttons {
    float: left;
    list-style-type: none;
    margin-top: 1em;
    margin-bottom: 1em;
    padding-left: 2%;
    width: 96%;
}
.awa-buttons li {
    float: left;
    width: auto;
    padding-right: 2%;
}
.awa-cancel {
    padding: 0.5em;
    display: inline-block;
}

/* Global layouts */
div.awa-side1, div.awa-side2 {
    float: left;
}
div.awa-side1 {
    padding-right: 1%;
    padding-left: 1%;
    width: 50%;
}
div.awa-side2 {
    padding-left: 1%;
    padding-right: 1%;
    width: 50%;
}
.awa-columns {
    display: flex;
    flex-direction: row;
    width: 100%;
}

/**
 * AWA Errors
 */
li.awa-error label,
dl.awa-error dt,
span.awa-error, dl.awa-error dt label, dl.asf-error dt label, dl.asf-error dd span {
    color: var(--text-error);
}
span.awa-error {
    margin-bottom: 2px;
    margin-top: 2px;
    height: auto;
}
ul.awa-error {
    list-style-type: none;
    float: left;
    width: 100%;
    color: red;
    margin-top: 0.5em;
    margin-bottom: 0.5em;
}
ul.awa-error li {
    float: left;
    width: 100%;
}

/**
 * Form definition.
 */
div.awa-form, .awa-container, .awa-form-container {
    float: left;
    width: 100%;
    padding-top: 5px;
    padding-bottom: 5px;
}
.awa-form-container {
    padding-left: 1%;
    padding-right: 1%;
}

/**
 * A form field (optional or required).
 *  - dt contains the label
 *  - dd contains the input field
 */
dl.awa-optional, dl.awa-required {
    width: 100%;
    padding-left: 2%;
    padding-right: 2%;
}
dl.awa-optional dt, dl.awa-required dt {
    float: left;
    width: 100%;
    padding-top: 8px;
}
dl.awa-optional dd, dl.awa-required dd {
    float: left;
    clear: both;
    width: 100%;
}
/* ... */

